content/_generated-doc/2.7/config/quarkus-elytron-security-oauth2.adoc
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference.searchable, cols="80,.^10,.^10"]
|===

h|[[quarkus-elytron-security-oauth2_configuration]]link:#quarkus-elytron-security-oauth2_configuration[Configuration property]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-elytron-security-oauth2_quarkus.oauth2.enabled]]`link:#quarkus-elytron-security-oauth2_quarkus.oauth2.enabled[quarkus.oauth2.enabled]`

[.description]
--
Determine if the OAuth2 extension is enabled. Enabled by default if you include the `elytron-security-oauth2` dependency, so this would be used to disable it.
--|boolean 
|`true`


a|icon:lock[title=Fixed at build time] [[quarkus-elytron-security-oauth2_quarkus.oauth2.role-claim]]`link:#quarkus-elytron-security-oauth2_quarkus.oauth2.role-claim[quarkus.oauth2.role-claim]`

[.description]
--
The claim that is used in the introspection endpoint response to load the roles.
--|string 
|`scope`


a| [[quarkus-elytron-security-oauth2_quarkus.oauth2.client-id]]`link:#quarkus-elytron-security-oauth2_quarkus.oauth2.client-id[quarkus.oauth2.client-id]`

[.description]
--
The OAuth2 client id used to validate the token. Mandatory if the extension is enabled.
--|string 
|


a| [[quarkus-elytron-security-oauth2_quarkus.oauth2.client-secret]]`link:#quarkus-elytron-security-oauth2_quarkus.oauth2.client-secret[quarkus.oauth2.client-secret]`

[.description]
--
The OAuth2 client secret used to validate the token. Mandatory if the extension is enabled.
--|string 
|


a| [[quarkus-elytron-security-oauth2_quarkus.oauth2.introspection-url]]`link:#quarkus-elytron-security-oauth2_quarkus.oauth2.introspection-url[quarkus.oauth2.introspection-url]`

[.description]
--
The OAuth2 introspection endpoint URL used to validate the token and gather the authentication claims. Mandatory if the extension is enabled.
--|string 
|


a| [[quarkus-elytron-security-oauth2_quarkus.oauth2.ca-cert-file]]`link:#quarkus-elytron-security-oauth2_quarkus.oauth2.ca-cert-file[quarkus.oauth2.ca-cert-file]`

[.description]
--
The OAuth2 server certificate file. *Warning*: this is not supported in native mode where the certificate must be included in the truststore used during the native image generation, see link:native-and-ssl.html[Using SSL With Native Executables].
--|string 
|

|===